@@ -1,2 +1,9 @@
 # PotatoBlindTest
 Projet de piscine dans le cadre le l'UE de Java Avancé
+
+
+# Options VM
+Pour exécuter une application JavaFX, il faut ajouter les options VM:
+```
+--module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml
+``` 
